Fix padding and overflow

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
     font-size: 1.4vw;
     display: flex;
     justify-content: center;
-    align-items: center;
     overflow-x: auto;
     white-space: nowrap;
 }
